conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur()==true{recule()}
   ^Conditions:4: error: illegal start of simple expression
	}
        ^